; ModuleID = '/home/carl/AnghaBench/lab/engine/code/renderergl2/extr_tr_light.c_R_LightDirForPoint.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/renderergl2/extr_tr_light.c_R_LightDirForPoint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32* }
%struct.TYPE_10__ = type { i32, %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i32 }

@qfalse = common dso_local global i32 0, align 4
@qtrue = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @R_LightDirForPoint(i32 %0, i32 %1, i32 %2, %struct.TYPE_9__* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_9__*, align 8
  %10 = alloca %struct.TYPE_10__, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store %struct.TYPE_9__* %3, %struct.TYPE_9__** %9, align 8
  %11 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %12 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %17

15:                                               ; preds = %4
  %16 = load i32, i32* @qfalse, align 4
  store i32 %16, i32* %5, align 4
  br label %42

17:                                               ; preds = %4
  %18 = call i32 @Com_Memset(%struct.TYPE_10__* %10, i32 0, i32 8)
  %19 = load i32, i32* %6, align 4
  %20 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %10, i32 0, i32 1
  %21 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @VectorCopy(i32 %19, i32 %22)
  %24 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %25 = call i32 @R_SetupEntityLightingGrid(%struct.TYPE_10__* %10, %struct.TYPE_9__* %24)
  %26 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %10, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* %8, align 4
  %29 = call float @DotProduct(i32 %27, i32 %28)
  %30 = fcmp ogt float %29, 0x3FC99999A0000000
  br i1 %30, label %31, label %36

31:                                               ; preds = %17
  %32 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %10, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = load i32, i32* %7, align 4
  %35 = call i32 @VectorCopy(i32 %33, i32 %34)
  br label %40

36:                                               ; preds = %17
  %37 = load i32, i32* %8, align 4
  %38 = load i32, i32* %7, align 4
  %39 = call i32 @VectorCopy(i32 %37, i32 %38)
  br label %40

40:                                               ; preds = %36, %31
  %41 = load i32, i32* @qtrue, align 4
  store i32 %41, i32* %5, align 4
  br label %42

42:                                               ; preds = %40, %15
  %43 = load i32, i32* %5, align 4
  ret i32 %43
}

declare dso_local i32 @Com_Memset(%struct.TYPE_10__*, i32, i32) #1

declare dso_local i32 @VectorCopy(i32, i32) #1

declare dso_local i32 @R_SetupEntityLightingGrid(%struct.TYPE_10__*, %struct.TYPE_9__*) #1

declare dso_local float @DotProduct(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
